// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with load more 1`] = `
<ForwardRef(forwardRef)
  className="Queue-root"
  size="double"
>
  <QueueWrapper
    card={[Function]}
    comments={Array []}
    selected={0}
    singleView={false}
  />
  <ForwardRef(forwardRef)
    justifyContent="center"
  >
    <AutoLoadMoresContainer
      disableLoadMore={false}
      onLoadMore={[Function]}
    />
  </ForwardRef(forwardRef)>
  <UserHistoryDrawer
    onClose={[Function]}
    open={false}
    userID=""
  />
  <ConversationModal
    commentID=""
    onClose={[Function]}
    onUsernameClicked={[Function]}
    open={false}
  />
</ForwardRef(forwardRef)>
`;

exports[`renders correctly without load more 1`] = `
<ForwardRef(forwardRef)
  className="Queue-root"
  size="double"
>
  <QueueWrapper
    card={[Function]}
    comments={Array []}
    selected={0}
    singleView={false}
  />
  <UserHistoryDrawer
    onClose={[Function]}
    open={false}
    userID=""
  />
  <ConversationModal
    commentID=""
    onClose={[Function]}
    onUsernameClicked={[Function]}
    open={false}
  />
</ForwardRef(forwardRef)>
`;
